crates/background/src/snapshots/background__haunted_one__tests__bonds.snap
---
source: crates/background/src/haunted_one.rs
expression: background.bonds()

---
- I keep my thoughts and discoveries in a journal. My journal is my legacy.
- I would sacrifice my life and my soul to protect the innocent.
- My torment drove away the person I love. I strive to win back the love I’ve lost.
- A terrible guilt consumes me. I hope that I can find redemption through my actions.
- "There’s evil in me, I can feel it. It must never be set free."
- I have a child to protect. I must make the world a safer place for him (or her).

