crates/background/src/snapshots/background__haunted_one__tests__ideals.snap
---
source: crates/background/src/haunted_one.rs
expression: background.ideals()

---
- - "I try to help those in need, no matter what the personal cost."
  - Good
- - I’ll stop the spirits that haunt me or die trying.
  - Any
- - "I kill monsters to make the world a safer place, and to exorcise my own demons."
  - Good
- - I have a dark calling that puts me above the law.
  - Chaotic
- - I like to know my enemy’s capabilities and weaknesses before rushing into battle.
  - Lawful
- - "I’m a monster that destroys other monsters, and anything else that gets in my way."
  - Evil

