crates/background/src/snapshots/background__haunted_one__tests__skills.snap
---
source: crates/background/src/haunted_one.rs
expression: "HauntedOne::skills()"

---
- Arcana
- Investigation
- Religion
- Survival

