crates/background/src/snapshots/background__haunted_one__tests__snapshot_addl_equipment.snap
---
source: crates/background/src/haunted_one.rs
expression: background.addl_equipment()

---
- HolySymbol
- Trinket:
    - ~
    - ~
    - true

