crates/background/src/snapshots/background__haunted_one__tests__snapshot_addl_languages.snap
---
source: crates/background/src/haunted_one.rs
expression: background.addl_languages()

---
- 1
- Exotic

