crates/background/src/snapshots/background__haunted_one__tests__snapshot_addl_proficiencies.snap
---
source: crates/background/src/haunted_one.rs
expression: background.addl_proficiencies()

---
- Skill:
    - - Arcana
      - Investigation
      - Religion
      - Survival
    - 2

