crates/background/src/snapshots/background__haunted_one__tests__snapshot_citations.snap
---
source: crates/background/src/haunted_one.rs
expression: background.citations()

---
- - Cos
  - 209

