crates/background/src/snapshots/background__haunted_one__tests__snapshot_features.snap
---
source: crates/background/src/haunted_one.rs
expression: background.features()

---
- title: Heart of Darkness
  citation:
    - Cos
    - 209

