crates/background/src/snapshots/background__haunted_one__tests__traits.snap
---
source: crates/background/src/haunted_one.rs
expression: background.traits()

---
- I don’t run from evil. Evil runs from me.
- I like to read and memorize poetry. It keeps me calm and brings me fleeting moments of happiness.
- "I spend money freely and live life to the fullest, knowing that tomorrow I might die."
- I live for the thrill of the hunt.
- I don’t talk about the thing that torments me. I’d rather not burden others with my curse.
- I expect danger around every corner.
- "I refuse to become a victim, and I will not allow others to be victimized."
- I put no trust in divine beings.

